TUT: Fix overflow CSS in TOC

--- a/app/tut/main.css
+++ b/app/tut/main.css
@@ -21,6 +21,12 @@ html {
     width: 50rem;
     height: 20rem;
 }
+#TOC {
+    height: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
 #TOC ul {
     list-style-type: none;
     flex-shrink: 0;
